# opengl-tut

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: main.cpp  shader.cpp
src/include/: camera.h  color.h  defer.h  shader.h
src/shaders/: 1-colors.fs  shader.frag  shader.vert  shader2.frag
